1999-07-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntp_update (UPDATE_OPTIONS): Typo.

1999-07-07  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntp_update: Check out copyright.htm before COPYRIGHT

	* ntpd/ntp_config.c: Support for PPS assert/clear/hardpps
	* ntpd/ntp_refclock.c (refclock_ioctl): Ditto
	(refclock_gtlin): Ditto
	* html/clockopt.htm: Document.
	From: John Hay <jhay@mikom.csir.co.za>

        * html/monopt.htm: We have four types of files now
        * ntpd/refclock_oncore.c: If debug is on, tell when
        we are waiting for a valid almanac
	From: Poul-Henning Kamp <phk@critter.freebsd.dk>

	* include/ntp_machine.h (HAVE_TERMIOS): STREAMS does not imply
	HAVE_TERMIOS !!!
	* include/parse.h (timercmp): Macro defined if needed.
	* ntpd/ntp_config.c (SIGCHLD): Macro defined as SIGCLD if needed.
	(sys/wait.h): File included only if HAVE_SYS_WAIT_H.
	* configure.in (sys/wait.h): File added to AC_CHECK_HEADERS list.
	From: Philippe De Muyter  <phdm@macqel.be>

1999-06-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_irig.c (irig_debug): NetBSD patches
	From: Frederick Bruckman <fb@enteract.com>

	* util/ntptime.c (main): ntx.freq bugfix (-f option)
	From: Frederick Bruckman <fb@enteract.com>

1999-06-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Fix typo with DECL_H_ERRNO test

	* ntpd/ntp_loopfilter.c: Lose syscall decl, it's handled in
	l_stdlib.h now.
	* ntpd/ntp_request.c: Ditto
	* util/ntptime.c: Ditto

Mon May 31 18:49:49 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* ntpd/ntp_proto.c (proto_config): Don't set sys_bclient on
	PROTO_MULTICAST_ADD, only caller can decide; remove wrong set on
	PROTO_MULTICAST_DEL.

Mon May 31 18:49:49 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* ntpd/refclock_parse.c (stream_receive): Cast size_t to int to
	match format.
	(local_receive): Likewise.
	(trimbletaip_event): Likewise.
	(stream_receive): Cast struct timeval members to long to match
	format.
	(local_receive): Likewise.
